<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="net.androidbootcamp.interactivequizgame.MainActivity"
    android:theme="@style/AppTheme"
    android:background="#000000">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/marvel_movie_quiz"
        android:id="@+id/marvel_txt"
        android:layout_gravity="center_horizontal"
        android:textSize="28sp"
        android:textColor="#d80202" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/this_is_a_fun_quiz_to_test_the_user_on_there_knowledge_on_the_mcu_marvel_cinematic_universe_movies_n_nif_you_have_seen_all_the_movies_in_this_universe_this_quiz_will_be_much_easier_if_not_it_will_be_a_challenge_n_nkeep_in_mind_that_you_must_answer_every_question_before_continuing_to_the_next_and_you_can_apos_t_go_back_good_luck_and_have_fun"
        android:id="@+id/quizExplanation_txt"
        android:layout_gravity="center_horizontal"
        android:textColor="#ffffff"
        android:layout_marginTop="7dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_quiz"
        android:id="@+id/btnStartQuiz"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp" />
</LinearLayout>
