<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="net.androidbootcamp.interactivequizgame.SingleAnswer"
    android:background="#c6c3c3">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="Question: "
            android:id="@+id/questionNumber_txt"
            android:textColor="#000000"
            android:textSize="24sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="1"
            android:id="@+id/number_txt"
            android:textColor="#b30505"
            android:textSize="24sp" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Question_txt"
        android:layout_gravity="center_horizontal"
        android:textColor="#b30505"
        android:textSize="20sp"
        android:textAlignment="center"
        android:layout_marginTop="15dp" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radioGroup"
        android:layout_gravity="center_horizontal">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/firstRadio"
            android:id="@+id/answerOne_radioBtn"
            android:checked="false"
            android:textColor="#000000"
            android:background="#c6c3c3"
            android:textSize="18sp"
            android:layout_marginTop="15dp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/secondRadio"
            android:id="@+id/answerTwo_radioBtn"
            android:checked="false"
            android:textColor="#000000"
            android:background="#c6c3c3"
            android:textSize="18sp"
            android:layout_marginTop="10dp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thirdRadio"
            android:id="@+id/answerThree_radioBtn"
            android:checked="false"
            android:textColor="#000000"
            android:background="#c6c3c3"
            android:textSize="18sp"
            android:layout_marginTop="10dp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New RadioButton"
            android:id="@+id/answerFour_radioBtn"
            android:checked="false"
            android:textColor="#000000"
            android:background="#c6c3c3"
            android:textSize="18sp"
            android:layout_marginTop="10dp" />
    </RadioGroup>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/enterNumber_txt"
        android:layout_gravity="center_horizontal"
        android:textColor="#000000" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:id="@+id/next_Btn"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_and_view_results"
        android:id="@+id/Submit_btn"
        android:layout_gravity="center_horizontal"
        android:visibility="invisible" />

</LinearLayout>
